Updates to secret auth; UI;
